@@ -1,3 +1,7 @@
+2001-07-25  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: New file.
+
 2001-07-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* iconv/iconvconfig.c (main): Don't write an output file if we
